# falcon-r1cs

./: Cargo.toml  README.md
examples/: constraint_counts.rs
falcon-aggregate-sig/: Cargo.toml
falcon-aggregate-sig/src/: aggregated_signature_circuit.rs  lib.rs
falcon-r1cs/: Cargo.toml
falcon-r1cs/examples/: constraint_counts.rs  pok_sig.rs
falcon-r1cs/src/: lib.rs
falcon-r1cs/src/circuits/: falcon_dual_ntt.rs  falcon_ntt.rs  mod.rs  ntt.rs  schoolbook.rs
falcon-r1cs/src/gadgets/: arithmetics.rs  dual_poly.rs  misc.rs  mod.rs  ntt.rs  poly.rs  range_proofs.rs
src/: constants.rs  errors.rs  gadgets.rs  lib.rs  ntt.rs  schoolbook.rs
src/circuits/: ntt.rs
src/gadgets/: arithmetics.rs  mod.rs  ntt.rs  range_proofs.rs
