[package]
name = "falcon-aggregate-sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon-r1cs = { path = "../falcon-r1cs" }
falcon-rust = { git = "https://github.com/zhenfeizhang/falcon-rust" }

# Arkworks dependencies
ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false, features = ["r1cs"] }
ark-ff = { version = "0.3.0", default-features = false }
ark-r1cs-std = { version = "0.3.1", default-features = false }
ark-relations = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-groth16 = { version = "0.3.0", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "0.3.0", default-features = false, features = ["r1cs"]}

num-bigint = { version = "0.4", default-features = false}
rand_chacha = { version = "0.3.0", default-features = false }